# finanpyV2

./: .dockerignore  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.prod.yml  docker-compose.vps.yml  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  views.py
api/: serializers.py  tests.py  urls.py  views.py
budgets/: admin.py  context_processors.py  forms.py  models.py  plan_item_rules.py  signals.py  tests.py  urls.py  views.py
categories/: forms.py  views.py
core/: pwa_views.py  settings.py  settings_production.py  tests.py  urls.py
docker/: entrypoint.sh  nginx.conf
docs/: B1-API-REST-SPEC.md  JAVASCRIPT_FEATURES.md  README.md  RELATORIO_TRANSACOES_f4f3ea25-f362-4074-bba1-e09891c58fb5.xlsx  architecture.md  backlog.md  budget-alerts.md  coding-standards.md  configuration.md  database-structure.md  deployment.md  frontend-guidelines.md  lighthouse-m7-results.md  mobile-architecture.md  setup-guide.md  static-media-configuration.md  tailwindcss-setup.md  tasks.md  troubleshooting.md
goals/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
mcp/: .env.example  HERMES_CONFIG.md  pyproject.toml  requirements.txt  run_mcp.py
mcp/finanpy_mcp/: __init__.py  client.py  config.py  server.py
mcp/finanpy_mcp/tools/: __init__.py  accounts.py  budgets.py  categories.py  goals.py  plans.py  reports.py  transactions.py
mcp/tests/: __init__.py  conftest.py  test_accounts.py  test_categories.py  test_transactions.py
profiles/: admin.py  forms.py  models.py  signals.py  tests.py  views.py
(+128 files in other folders)
