[project]
name = "finanpy"
version = "2.0.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "e2e: End-to-end tests (require running server)",
    "a11y: Accessibility tests",
]
