[project]
name = "finanpy-mcp"
version = "0.1.0"
description = "MCP Server for FinanPy"
requires-python = ">=3.12"
dependencies = [
    "mcp>=0.9.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
finanpy-mcp = "finanpy_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"